tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Tuple<Left Right> = {left: Left right: Right}

type Foo = Tuple<Left Integer Left String>

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_3.kk:3:31
  │
3 │ type Foo = Tuple<Left Integer Left String>
  │                               ^^^^ Type argument name mismatch
  │
  = The expected name here is `Right`.
